--- a/Frontend/Shared/ProfileHeader.razor
+++ b/Frontend/Shared/ProfileHeader.razor
@@ -15,7 +15,7 @@
 
         @if (user.Id == appUser.Id)
         {
-            <button class="btn btn-info float-right">Edit Profile</button>
+            <a type="button" class="btn btn-info float-right" href="profile/edit">Edit Profile</a>
         }
         else
         {
