--- a/Frontend/Pages/Auth/Register.razor
+++ b/Frontend/Pages/Auth/Register.razor
@@ -11,7 +11,7 @@
 
 @inject HttpClient client
 @inject NavigationManager NavigationManager
-@inject AppUser AppUser
+@inject AppUser appUser
 @inject ILocalStorageService localStorage
 
 <div class="container pt-5 w-25">
@@ -119,7 +119,7 @@
             string value = await response.Content.ReadAsStringAsync();
 
             AuthenticationResponse auth = JsonConvert.DeserializeObject<AuthenticationResponse>(value);
-            await AppUser.SetLogin(auth, client);
+            await appUser.SetLogin(auth, client);
 
             await localStorage.SetItemAsync("auth", auth);
 
