--- a/Frontend/Shared/ProfileInfo.razor
+++ b/Frontend/Shared/ProfileInfo.razor
@@ -5,7 +5,7 @@
 @inject HttpClient client
 
 <div class="row border-bottom border-secondary p-3">
-    <div class="col-sm-2">
+    <div class="col-sm-auto">
         <img src="api/users/@user.Id/avatar" class="img rounded-circle"
              style="width: 50px; height: 50px; outline: none; cursor: pointer" @onclick="() => GoToProfile(user)" />
     </div>
