Added Explore section

--- a/Frontend/Pages/Auth/Login.razor
+++ b/Frontend/Pages/Auth/Login.razor
@@ -14,7 +14,7 @@
 @inject AppUser AppUser
 @inject ILocalStorageService localStorage
 
-<div class="container pt-5 w-25">
+<div class="container p-5 w-25 border border-secondary">
     <EditForm Model="@loginData" OnValidSubmit="@SendData" class="text-light">
         <h1>Log in</h1>
         <div class="mb-3 mt-3">
