--- a/Frontend/Pages/Auth/Register.razor
+++ b/Frontend/Pages/Auth/Register.razor
@@ -14,7 +14,7 @@
 @inject AppUser appUser
 @inject ILocalStorageService localStorage
 
-<div class="container pt-5 w-25">
+<div class="container p-5 w-25 border border-secondary">
     <EditForm Model="@registerData" OnValidSubmit="@SendData" class="text-light">
         <h1>Sign up</h1>
         <div class="mb-3 mt-3">
